@@ -1,15 +1,18 @@
 package org.example.post.service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.example.post.common.PostMapper;
-import org.example.post.domain.dto.request.PaginationRequestDto;
-import org.example.post.domain.dto.request.PostRequestDto;
-import org.example.post.domain.dto.response.PaginationResponseDto;
-import org.example.post.domain.dto.response.PostResponseDto;
+import org.example.image.storage.core.StorageType;
+import org.example.image.storageManager.common.StorageSaveResult;
+import org.example.image.storageManager.imageStorageManager.ImageStorageManager;
+import org.example.post.domain.dto.PaginationDto;
+import org.example.post.domain.dto.PostDto;
+import org.example.post.domain.entity.HashtagEntity;
 import org.example.post.domain.entity.PostEntity;
 import org.example.post.domain.enums.PostStatus;
+import org.example.post.repository.HashtagRepository;
 import org.example.post.repository.PostRepository;
 import org.example.user.domain.entity.member.UserEntity;
 import org.example.user.repository.member.UserRepository;
@@ -20,6 +23,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -30,6 +34,8 @@ public class PostService {
 
 	private final PostRepository postRepository;
 	private final UserRepository userRepository;
+	private final HashtagRepository hashtagRepository;
+	private final ImageStorageManager imageStorageManager;
 
 	@Transactional
 	public PostDto.CreatePostDtoResponse createPost(PostDto.CreatePostDtoRequest postDto,
@@ -44,25 +50,36 @@ public class PostService {
 			user,
 			postDto.postContent(),
 			storageSaveResult.resourceLocationId(),
-			0, // Initialize likeCount
-			PostStatus.PUBLISHED, // Set default status
-			postDto.convertStringsToHashtags(postDto.getHashtagContents())
+			new ArrayList<>()
 		);
 
 		PostEntity savedPost = postRepository.save(postEntity);
+
+		// hashtagContents split by "#" and save postId and hashtagContent to HashtagEntity
+		List<HashtagEntity> hashtags = new ArrayList<>();
+		for (String hashtagString : postDto.convertHashtagContents(postDto.hashtagContents(), "#")) {
+			HashtagEntity savedHashtag = new HashtagEntity(postEntity, hashtagString);
+			hashtags.add(savedHashtag);
+			hashtagRepository.save(savedHashtag);
+		}
+		// PostEntity에 HashtagEntity 리스트 설정
+		postEntity.setHashtags(hashtags);
+
+		postRepository.save(postEntity);
+
 		return PostDto.CreatePostDtoResponse.toDto(savedPost);
 	}
 
-	public ResponseEntity<PaginationResponseDto> getAllPostsOrderedBySortStrategy(
-		PaginationRequestDto paginationRequestDto) {
+	public PaginationDto.PaginationDtoResponse getAllPostsOrderedBySortStrategy(
+		PaginationDto.PaginationDtoRequest paginationRequestDto) {
 
 		// get information for pagination by DTO
-		int page = paginationRequestDto.getPage();
-		int size = paginationRequestDto.getSize();
-		List<String> hashtagList = paginationRequestDto.getSearchHashtagList();
-		String searchString = paginationRequestDto.getSearchString();
-		String direction = paginationRequestDto.getSortDirection();
-		String field = paginationRequestDto.getSortField();
+		int page = paginationRequestDto.page();
+		int size = paginationRequestDto.size();
+		String searchString = paginationRequestDto.searchString();
+		String direction = paginationRequestDto.sortDirection();
+		String field = paginationRequestDto.sortField();
+		List<String> searchHashtagList = paginationRequestDto.convertHashtagContents(paginationRequestDto.searchHashtagList(), "#");
 
 		// sort by field ordered by descending
 		Sort sort = Sort.by(field).descending();
@@ -88,56 +105,46 @@ public class PostService {
 
 		// search posts containing hashtag content
 		// hashtagList not null
-		if (hashtagList != null && !hashtagList.isEmpty()) {
-			postPage = postRepository.findAllByHashtagsContainingAndPostStatus(hashtagList, PostStatus.PUBLISHED,
+		if (searchHashtagList != null && !searchHashtagList.isEmpty()) {
+			postPage = postRepository.findAllByHashtagsContainingAndPostStatus(searchHashtagList, PostStatus.PUBLISHED,
 				pageable);
 		}
 
 		// search posts containing both searchString and hashtag content
 		// get only some posts which must have both elements
-		if (hashtagList != null && searchString != null && !hashtagList.isEmpty() && !searchString.isBlank()) {
+		if (searchHashtagList != null && searchString != null && !searchHashtagList.isEmpty()
+			&& !searchString.isBlank()) {
 			postPage = postRepository.findAllByPostContentContainingAndHashtagsContainingAndPostStatus(searchString,
-				hashtagList, PostStatus.PUBLISHED, pageable);
+				searchHashtagList, PostStatus.PUBLISHED, pageable);
 		}
 
 		// find no post about search condition
-		// TODO: 수정 예정
 		if (postPage == null) {
 			throw new NullPointerException("No posts found");
 		}
 
 		// DTO for return data
-		PaginationResponseDto paginationResponseDto = new PaginationResponseDto();
-		paginationResponseDto.setPage(page);
-		paginationResponseDto.setSize(size);
-		paginationResponseDto.setTotalElements(postPage.getTotalElements());
-		paginationResponseDto.setTotalPages(postPage.getTotalPages());
+		PaginationDto.PaginationDtoResponse paginationResponseDto = new PaginationDto.PaginationDtoResponse(
+			page,
+			size,
+			postPage.getTotalElements(),
+			postPage.getTotalPages(),
+			searchString,
+			null
+		);
 
-		paginationResponseDto.setPostResponseDtoList(postPage.stream()
-															 .map(postEntity -> {
-																 PostResponseDto postResponseDto = new PostResponseDto();
-																 postResponseDto.setPostId(postEntity.getPostId());
-																 postResponseDto.setPostContent(
-																	 postEntity.getPostContent());
-																 postResponseDto.setLikeCount(
-																	 postEntity.getLikeCount());
-																 postResponseDto.setHashtagContents(
-																	 postEntity.getHashtagContents());
-																 return postResponseDto;
-															 }).collect(Collectors.toList()));
+		paginationResponseDto.postResponseDtoList(postPage.stream()
+			.map(PostDto.GetPostDtoResponse::toDto).toList());
 
-		return ResponseEntity.status(HttpStatus.OK)
-							 .body(paginationResponseDto);
+		return paginationResponseDto;
 	}
 
-	public ResponseEntity<PostResponseDto> getPostById(Long postId) {
-		PostEntity post = postRepository.findById(postId)
-										.orElseThrow(() -> new IllegalArgumentException(
-											"게시글이 존재하지 않습니다")); //TODO : custom 예외처리로 리팩토링 필요
+	public PostDto.GetPostDtoResponse getPostById(Long postId) {
+		PostEntity postEntity = postRepository.findById(postId)
+			.orElseThrow(() -> new IllegalArgumentException("게시글이 존재하지 않습니다")); //TODO : custom 예외처리로 리팩토링 필요
 
-		PostResponseDto postResponseDto = PostMapper.toDto(post);
+		return PostDto.GetPostDtoResponse.toDto(postEntity);
 
-		return ResponseEntity.status(HttpStatus.OK).body(postResponseDto);
 	}
 
 }
